[package]
name = "grit-find"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-openai = { version = "0.24", default-features = false, features = ["rustls"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
directories = "5"
